--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "papaparse": "^5.4.1",
+    "playwright": "^1.55.0",
     "puppeteer": "^24.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
