--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.468.0",
     "papaparse": "^5.4.1",
     "playwright": "^1.55.0",
     "puppeteer": "^24.17.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.7.3",
     "react-router-dom": "^7.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
