--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:fast": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "./deploy.sh"
+    "deploy": "./deploy.sh",
+    "deploy:fast": "npm run build:fast && echo '✅ 快速构建完成！可以部署 dist 目录'"
   },
   "dependencies": {
     "@playwright/test": "^1.55.0",
