--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "./deploy.sh",
-    "deploy:fast": "npm run build:fast && echo '✅ 快速构建完成！可以部署 dist 目录'"
+    "deploy:fast": "npm run build:fast && echo '✅ 快速构建完成！可以部署 dist 目录'",
+    "deploy:gh-pages": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@playwright/test": "^1.55.0",
@@ -46,6 +47,7 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.3.0",
     "globals": "^15.12.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
